--- a/src/gr830/q_ekf/pos_codegen/html/posEKF1_watch.html
+++ b/src/gr830/q_ekf/pos_codegen/html/posEKF1_watch.html
@@ -18,7 +18,7 @@
 <td class="watchclass">single</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1" id="S3T18">
+<tr class="var type1" id="S3T19">
 <td id="blank"></td><td>2</td>
 <td id=""><a href="#">Pa_apo</a></td>
 <td>Output</td><td class="watchsize" id="23">9 x 9</td>
@@ -32,7 +32,7 @@
 <td class="watchclass">single</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1" id="S5T23">
+<tr class="var type1" id="S5T24">
 <td id="blank"></td><td>4</td>
 <td id=""><a href="#">zFlag</a></td>
 <td>Input</td><td class="watchsize" id="13">3 x 1</td>
@@ -81,7 +81,7 @@
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1" id="S12T24">
+<tr class="var type1" id="S12T7">
 <td id="blank"></td><td>11</td>
 <td id=""><a href="#">r_ptam</a></td>
 <td>Input</td><td class="watchsize" id="13">3 x 1</td>
@@ -186,18 +186,18 @@
 <td class="watchclass">single</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1" id="S29T18">
+<tr class="var type1" id="S29T19">
 <td id="blank"></td><td>26</td>
 <td id=""><a href="#">P_apo</a></td>
 <td>Persistent</td><td class="watchsize" id="23">9 x 9</td>
 <td class="watchclass">single</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1" id="S32T2">
+<tr class="var type1" id="S32T7">
 <td id="blank"></td><td>27</td>
 <td id=""><a href="#">acck</a></td>
 <td>Local</td><td class="watchsize" id="13">3 x 1</td>
-<td class="watchclass">single</td>
+<td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
 <tr class="var type1" id="S33T2">
@@ -221,21 +221,21 @@
 <td class="watchclass">single</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1" id="S36T17">
+<tr class="var type1" id="S36T18">
 <td id="blank"></td><td>31</td>
 <td id=""><a href="#">E</a></td>
 <td>Local</td><td class="watchsize" id="14">3 x 3</td>
 <td class="watchclass">single</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1" id="S38T17">
+<tr class="var type1" id="S38T18">
 <td id="blank"></td><td>32</td>
 <td id=""><a href="#">Z</a></td>
 <td>Local</td><td class="watchsize" id="14">3 x 3</td>
 <td class="watchclass">single</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1" id="S39T18">
+<tr class="var type1" id="S39T19">
 <td id="blank"></td><td>33</td>
 <td id=""><a href="#">A_lin</a></td>
 <td>Local</td><td class="watchsize" id="23">9 x 9</td>
@@ -249,14 +249,14 @@
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1" id="S42T18">
+<tr class="var type1" id="S42T19">
 <td id="blank"></td><td>35</td>
 <td id=""><a href="#">P_apr</a></td>
 <td>Local</td><td class="watchsize" id="23">9 x 9</td>
 <td class="watchclass">single</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1" id="S43T19">
+<tr class="var type1" id="S43T20">
 <td id="blank"></td><td>36</td>
 <td id=""><a href="#">R_v &gt; 1</a></td>
 <td>Local</td><td class="watchsize" id="8">1 x 9</td>
@@ -277,7 +277,7 @@
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1" id="S44T18">
+<tr class="var type1" id="S44T19">
 <td id="blank"></td><td>39</td>
 <td id=""><a href="#">H_k &gt; 1</a></td>
 <td>Local</td><td class="watchsize" id="23">9 x 9</td>
@@ -319,14 +319,14 @@
 <td class="watchclass">single</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1" id="S46T17">
+<tr class="var type1" id="S46T18">
 <td id="blank"></td><td>45</td>
 <td id=""><a href="#">S_k &gt; 1</a></td>
 <td>Local</td><td class="watchsize" id="14">3 x 3</td>
 <td class="watchclass">single</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1" id="S46T18">
+<tr class="var type1" id="S46T19">
 <td id="blank"></td><td>46</td>
 <td id=""><a href="#">S_k &gt; 2</a></td>
 <td>Local</td><td class="watchsize" id="23">9 x 9</td>
@@ -340,7 +340,7 @@
 <td class="watchclass">single</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1" id="S48T18">
+<tr class="var type1" id="S48T19">
 <td id="blank"></td><td>48</td>
 <td id=""><a href="#">K_k &gt; 1</a></td>
 <td>Local</td><td class="watchsize" id="23">9 x 9</td>
